changed security key and updated role based authentication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,3 +14,5 @@ spring:
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
+jwt:
+  secretKey: "wiHpgJV9Is0zQRcsQYuOfVblNxfXkU4z6JquCyd4INV"
